src/test/ui/issues/issue-22638.stderr
error: reached the type-length limit while instantiating `D::matches::$CLOSURE`
  --> $DIR/issue-22638.rs:52:5
   |
LL | /     pub fn matches<F: Fn()>(&self, f: &F) {
LL | |
LL | |         let &D(ref a) = self;
LL | |         a.matches(f)
LL | |     }
   | |_____^
   |
   = note: consider adding a `#![type_length_limit="26214380"]` attribute to your crate

error: aborting due to previous error

